<resources>
    <string name="app_name" translatable="false">Bensons</string>
    <string name="title_navigation_activity">Editor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--
    - Edit these array and the strings below to add or remove elements in the navigation drawer.
    -
    - This other files have to be edited to make it work:
    -   * NavigationActivity.java
    -   * Constants.java
    -   * The respective layout xml and java files.
    -->
    <string-array name="array_navigation">
        <item>@string/menu_base</item>
        <item>@string/menu_element</item>
        <item>@string/menu_create_pdf</item>
        <item>@string/menu_send</item>
        <item>@string/menu_about</item>
        <item>@string/menu_test</item>
    </string-array>

    <string name="menu_base">Base</string>
    <string name="menu_element">Element</string>
    <string name="menu_create_pdf">Create PDF</string>
    <string name="menu_send">Send</string>
    <string name="menu_about">About</string>
    <string name="title">Title</string>
    <string name="menu_button">menu_button</string>
    <string name="action_settings">Settings</string>


    <string name="menu_test" translatable="false">Test</string>
    <string name="title_activity_selection">Selection</string>
    <string name="tab_text_1">Basic</string>
    <string name="tab_text_2">Colour</string>
    <string name="tab_text_3">Materials</string>
    <string name="cotton">Cotton</string>
    <string name="wool">Wool</string>
    <string name="woven">Woven</string>
    <string name="polyester" translatable="false">Polyester</string>
    <string name="softshell" translatable="false">SoftShell</string>
    <string name="other">Other</string>
    <string name="finish">Finish</string>
    <string name="additional_notes">Additional notes:</string>
    <string name="quantity">Quantity</string>
    <string name="min_300" translatable="false">Min. 300</string>
    <string name="size">Size</string>
    <string name="round_neck">Round Neck</string>
    <string name="preview">Preview</string>
    <string name="pick_colour">Pick colour</string>
    <string name="material">Material</string>
    <string name="hood">Hood</string>
    <string name="upload">Upload</string>
    <string name="skip">Skip</string>
    <string name="send">Send</string>
    <string name="cap">Cap</string>
    <string name="jacket">Jacket</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="polo" translatable="false">Polo</string>
    <string name="trousers">Trousers</string>
    <string name="print">Print</string>
    <string name="vest">Vest</string>
    <string name="embroidery">Embroidery</string>
    <string name="water_proof">Waterproof</string>
    <string name="fire_retardant">Fire retardant</string>
    <string name="zip">Zip</string>
    <string name="velcro_cuffs">Velcro cuffs</string>
    <string name="removable_sleeves">Removable sleeves</string>
    <string name="n_pokets">N. Pokets</string>
    <string name="select_you_packaging_logo">Select you packaging logo:</string>
    <string name="preview_of_the_logo">Preview of the logo</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="name_of_the_garment">Name of the garment</string>
    <string name="close_text">X</string>
    <string name="accept">Accept</string>

    <string-array name="sizes">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>S</item>
        <item>XXL</item>
        <item>XXXL</item>
    </string-array>
</resources>
